--- a/package.json
+++ b/package.json
@@ -74,8 +74,7 @@
     "test-runners": "npm run test-runner:ava && npm run test-runner:mocha && npm run test-runner:jest",
     "check-environment": "node scripts/check-environment.js",
     "lint:cpp": "find src -name \"*.?pp\" | xargs clang-format --dry-run --Werror",
-    "lint:fix:cpp": "find src -name \"*.?pp\" | xargs clang-format -i",
-    "postinstall": "node scripts/submit-analytics.js"
+    "lint:fix:cpp": "find src -name \"*.?pp\" | xargs clang-format -i"
   },
   "dependencies": {
     "@realm.io/common": "^0.1.1",
